--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     font-size: 10rem;
 }
 
 img {
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: center;
 }
