--- a/views/newpage.html
+++ b/views/newpage.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Page</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1 class="center">New Page</h1>
-    <img src="../img/variable.webp" alt="meme">
+    <img src="img/variable.webp" alt="meme">
 </body>
 </html>
